xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__comma.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_xpath(\"1, 2\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param {
                        name: Name(
                            "v0",
                        ),
                        type_: None,
                    },
                    Param {
                        name: Name(
                            "v1",
                        ),
                        type_: None,
                    },
                    Param {
                        name: Name(
                            "v2",
                        ),
                        type_: None,
                    },
                ],
                return_type: None,
                body: Spanned {
                    value: Sequence(
                        Sequence {
                            items: [
                                Spanned {
                                    value: Atom(
                                        Spanned {
                                            value: Const(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: 0..1,
                                        },
                                    ),
                                    span: 0..1,
                                },
                                Spanned {
                                    value: Atom(
                                        Spanned {
                                            value: Const(
                                                Integer(
                                                    2,
                                                ),
                                            ),
                                            span: 3..4,
                                        },
                                    ),
                                    span: 3..4,
                                },
                            ],
                        },
                    ),
                    span: 0..4,
                },
            },
        ),
        span: 0..4,
    },
)
