xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__function_call_with_sequence.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"compare('a', 'b', ((), 'http://www.w3.org/2005/xpath-functions/collation/codepoint', ()))\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v6",
                ),
                var_expr: Spanned {
                    value: Sequence(
                        Sequence {
                            items: [
                                Spanned {
                                    value: Atom(
                                        Spanned {
                                            value: Const(
                                                EmptySequence,
                                            ),
                                            span: 19..21,
                                        },
                                    ),
                                    span: 19..21,
                                },
                                Spanned {
                                    value: Atom(
                                        Spanned {
                                            value: Const(
                                                String(
                                                    "http://www.w3.org/2005/xpath-functions/collation/codepoint",
                                                ),
                                            ),
                                            span: 23..83,
                                        },
                                    ),
                                    span: 23..83,
                                },
                                Spanned {
                                    value: Atom(
                                        Spanned {
                                            value: Const(
                                                EmptySequence,
                                            ),
                                            span: 85..87,
                                        },
                                    ),
                                    span: 85..87,
                                },
                            ],
                        },
                    ),
                    span: 18..87,
                },
                return_expr: Spanned {
                    value: FunctionCall(
                        FunctionCall {
                            atom: Spanned {
                                value: Const(
                                    StaticFunctionReference(
                                        StaticFunctionId(
                                            10,
                                        ),
                                        None,
                                    ),
                                ),
                                span: 0..0,
                            },
                            args: [
                                Spanned {
                                    value: Const(
                                        String(
                                            "a",
                                        ),
                                    ),
                                    span: 8..11,
                                },
                                Spanned {
                                    value: Const(
                                        String(
                                            "b",
                                        ),
                                    ),
                                    span: 13..16,
                                },
                                Spanned {
                                    value: Variable(
                                        Name(
                                            "v6",
                                        ),
                                    ),
                                    span: 18..87,
                                },
                            ],
                        },
                    ),
                    span: 0..89,
                },
            },
        ),
        span: 0..89,
    },
)
