xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__intersect_except_chain.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"1 except 2 intersect 3 except 4\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v2",
                ),
                var_expr: Spanned {
                    value: NodeSet(
                        NodeSet {
                            operator: Intersect,
                            operands: [
                                Spanned {
                                    value: Atom(
                                        Spanned {
                                            value: Const(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: 0..1,
                                        },
                                    ),
                                    span: 0..1,
                                },
                                Spanned {
                                    value: Atom(
                                        Spanned {
                                            value: Const(
                                                Integer(
                                                    3,
                                                ),
                                            ),
                                            span: 21..22,
                                        },
                                    ),
                                    span: 21..22,
                                },
                            ],
                        },
                    ),
                    span: 0..31,
                },
                return_expr: Spanned {
                    value: Let(
                        Let {
                            name: Name(
                                "v5",
                            ),
                            var_expr: Spanned {
                                value: NodeSet(
                                    NodeSet {
                                        operator: Union,
                                        operands: [
                                            Spanned {
                                                value: Atom(
                                                    Spanned {
                                                        value: Const(
                                                            Integer(
                                                                2,
                                                            ),
                                                        ),
                                                        span: 9..10,
                                                    },
                                                ),
                                                span: 9..10,
                                            },
                                            Spanned {
                                                value: Atom(
                                                    Spanned {
                                                        value: Const(
                                                            Integer(
                                                                4,
                                                            ),
                                                        ),
                                                        span: 30..31,
                                                    },
                                                ),
                                                span: 30..31,
                                            },
                                        ],
                                    },
                                ),
                                span: 0..31,
                            },
                            return_expr: Spanned {
                                value: Binary(
                                    Binary {
                                        left: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v2",
                                                ),
                                            ),
                                            span: 0..31,
                                        },
                                        op: Except,
                                        right: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v5",
                                                ),
                                            ),
                                            span: 0..31,
                                        },
                                    },
                                ),
                                span: 0..31,
                            },
                        },
                    ),
                    span: 0..31,
                },
            },
        ),
        span: 0..31,
    },
)
